tests/application/ignore-reconcile/03-virtualservice-remove-label.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ignore-reconcile-ingress
  labels:
    skiperator.kartverket.no/ignore: "false"
