tests/application/ignore-reconcile/patch-application-ingress.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ignore-reconcile
spec:
  image: image
  port: 8080
  ingresses:
    - test.com
