tests/application/ignore-reconcile/remove-label.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ignore-reconcile-ingress
  labels:
    skiperator.kartverket.no/ignore: "false"
