tests/application/ignore-reconcile/virtualservice-set-label.yaml
# Testing with a VirtualService, but any reconciled object would do

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ignore-reconcile-ingress
  labels:
    skiperator.kartverket.no/ignore: "true"
