tests/application/ignore-reconcile/application-assert.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
   name: ignore-reconcile-ingress
spec:
  hosts:
    - example.com
