tests/application/ignore-reconcile/patch-application-ingress-assert.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ignore-reconcile-ingress
spec:
  hosts:
    - example.com
