tests/application/ignore-reconcile/remove-label-assert.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ignore-reconcile-ingress
spec:
  hosts:
    - test.com
