tests/application/ignore-reconcile/virtualservice-set-label-assert.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ignore-reconcile-ingress
  labels:
    skiperator.kartverket.no/ignore: "true"
